--- a/10_位运算.md
+++ b/10_位运算.md
@@ -3,6 +3,7 @@
 * 二进制中的5中运算：与（&）、或（|）、异或（^，相异为1）、左移（<<）、右移（>>）
 * 左移（m<<n）：将m左移n位，左侧的舍去，右侧补0。
 * 右移（m>>n）：将m左移n位，右侧舍去，左侧补0/符号位（若为有符号数）。
+* 二进制补码：正数（不变）、负数（除符号位外，其余按位取反，然后再加1）
 
 ### 问题10：二进制中1的个数
 1. 问题描述：输入一个整数，输出该数二进制表示中1的个数。其中负数用补码表示
@@ -52,9 +53,9 @@ class Solution:
     def NumberOf1(self, n):
         # write code here
         count = 0
-        # 把负号去掉，不然会陷入死循环
         if n<0:
-            n=n&0xFFFFFFFF
+            # 把负号去掉，0xFFFFFFFF代表一个16进制数，转为2进制为：32个1.
+            n=n&0xFFFFFFFF
         while n:
             n = n&(n-1)
             count+= 1
